--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pydantic-settings==2.3.1
 PyJWT==2.9.0
 opencv-python-headless==4.9.0.80
 numpy==1.26.4
-onnxruntime==1.18.1
+onnxruntime
 mediapipe==0.10.14
 joblib==1.4.2
 scikit-learn==1.5.1
