--- a/render.yaml
+++ b/render.yaml
@@ -1,22 +1,9 @@
 services:
   - type: web
-    name: hockeyshot-backend
-    env: docker
+    name: hockeymotion-backend
+    env: python
     plan: free
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
     autoDeploy: true
-    healthCheckPath: /health
-    envVars:
-      - key: JWT_SECRET
-        generateValue: true
-      - key: JWT_EXPIRE_MIN
-        value: "120"
-      - key: ADMIN_USER
-        value: admin
-      - key: ADMIN_PASS
-        value: change_me
-      - key: API_KEY
-        value: demo_api_key
-    disk:
-      name: storage
-      mountPath: /app/storage
-      sizeGB: 2
+    healthCheckPath: /
