--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ pydantic-settings==2.3.1
 PyJWT==2.9.0
 opencv-python-headless==4.9.0.80
 numpy==1.26.4
-onnxruntime==1.20.3
 scipy==1.11.4
+onnxruntime==1.20.0
 joblib==1.4.2
 scikit-learn==1.5.1
+threadpoolctl==3.5.0
