--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 fastapi==0.111.0
 uvicorn==0.30.1
 python-multipart==0.0.9
-pydantic==2.7.3
-pydantic-settings==2.3.1
+
+# Bump these two:
+pydantic==2.8.2
+pydantic-settings==2.4.0
+
 PyJWT==2.9.0
 opencv-python-headless==4.9.0.80
+numpy==1.26.4
 onnxruntime==1.22.1
+scipy==1.11.4
+joblib==1.4.2
+scikit-learn==1.5.1
