--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 fastapi==0.111.0
 uvicorn==0.30.1
 python-multipart==0.0.9
+
+# Pydantic v2 stack
 pydantic==2.8.2
 pydantic-settings==2.4.0
+
 PyJWT==2.9.0
-opencv-python-headless==4.9.0.80
+
+# Core scientific stack (compatible with Python 3.13 + NumPy 2.x)
 numpy==2.3.2
-onnxruntime==1.22.1
 scipy==1.16.1
-joblib==1.4.2
 scikit-learn==1.5.2
+joblib==1.4.2
+threadpoolctl==3.5.0
+
+# Computer vision / ML runtimes
+opencv-python-headless==4.10.0.84
+onnxruntime==1.22.1
